--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -55,6 +55,7 @@ on fs
     mkdir /persist/data 0700 system system
     mkdir /persist/data/sfs 0700 system system
     mkdir /persist/data/tz 0700 system system
+    mkdir /persist/audio 0771 media audio
 
     mount vfat /dev/block/platform/msm_sdcc.1/by-name/modem /firmware ro context=u:object_r:firmware_file:s0,shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
 
@@ -88,6 +89,8 @@ on boot
     chown system system /sys/class/input/input4/enabled
     chown system system /sys/class/input/input5/enabled
     chown system system /sys/class/input/input6/enabled
+    chown system system /sys/class/leds/button-backlight/max_brightness
+    chown system system /sys/class/leds/button-backlight1/max_brightness
     chown system system /sys/bus/i2c/devices/2-004a/golden_ref
     chown system system /sys/bus/i2c/devices/2-004a/golden_en
     chown system system /sys/bus/i2c/devices/2-0048/auto_tune
@@ -144,18 +147,6 @@ service qgesturesvr /system/bin/mm-gesture-daemon
     class late_start
     user system
     group system camera input graphics net_bt_stack
-
-service qrngd /system/bin/qrngd -f
-    class main
-    user root
-    group root
-
-service qrngp /system/bin/qrngp
-    class main
-    user root
-    group root
-    oneshot
-    disabled
 
 on property:sys.boot_completed=1
     start qrngp
@@ -240,9 +231,14 @@ service usf_hovering /system/bin/usf_hovering
     group system inet
     disabled
 
+service usf_sync_gesture /system/bin/usf_sync_gesture
+    user system
+    group system inet audio
+    disabled
+
 service usf_proximity /system/bin/usf_proximity
     user system
-    group system inet
+    group system inet audio
     disabled
 
 service usf-post-boot /system/bin/sh /system/etc/usf_post_boot.sh
@@ -351,16 +347,21 @@ on property:persist.sys.aries.power_profile=low
     stop thermal-perf
     start thermal-engine
 
-on property:persist.sys.display_prefer=0
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x2
-on property:persist.sys.display_prefer=1
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x1
-on property:persist.sys.display_prefer=2
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x2
-on property:persist.sys.display_prefer=3
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x3
-on property:persist.sys.display_prefer=4
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x4
+service service_ad /system/bin/adenable
+    user root
+    oneshot
+    disabled
+
+on property:persist.sys.ltm_enable=*
+    start service_ad
+
+service gamut_mode /system/bin/gamutmode
+    user root
+    oneshot
+    disabled
+
+on property:persist.sys.gamut_mode=*
+    start gamut_mode
 
 on property:persist.sys.display_ce=0
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0xF0
@@ -372,7 +373,11 @@ on property:persist.sys.display_ce=11
 on property:persist.sys.display_cabc=0
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0xF00
 on property:persist.sys.display_cabc=1
-    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x100
+    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x200
+on property:persist.sys.display_cabc=2
+    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x300
+on property:persist.sys.display_cabc=3
+    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0x400
 
 on property:persist.sys.display_level=0
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0xF000
@@ -394,3 +399,19 @@ on property:persist.sys.display_idle=1
 on property:persist.sys.display_idle=0
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 0xF0000
 
+on property:persist.radio.modem=LTE-X5-ALL
+    setprop telephony.lteOnCdmaDevice 1
+    setprop persist.radio.disable_flexmap 0
+    setprop ro.sys.oosenhance.timer 20000
+on property:persist.radio.modem=LTE-X5
+    setprop ro.sys.oosenhance.timer 20000
+
+service eyecare /system/bin/eyecare
+    user root
+    oneshot
+    disabled
+
+on property:persist.sys.display_eyecare=*
+    start eyecare
+on property:persist.sys.display_prefer=*
+    start eyecare
